--- a/app/Resources/views/course_info/view/student_teaching_mode_dist.html.twig
+++ b/app/Resources/views/course_info/view/student_teaching_mode_dist.html.twig
@@ -6,7 +6,7 @@
 {% endif %}
 
 
-<div class="grid-element">
+<div class="mb-4">
     <div class="student-subtitle">
         <img src="{{ asset('build/images/distanciel_picto.png') }}" class="icon-40" alt="">
         <h5 class="title-underlined">{{ 'app.view.student.presentation.distant' | trans }}</h5>
