--- a/app/Resources/views/course_info/view/student_teaching_mode_in_class.html.twig
+++ b/app/Resources/views/course_info/view/student_teaching_mode_in_class.html.twig
@@ -8,7 +8,7 @@
 {% endif %}
 
 
-<div class="grid-element">
+<div class="mr-3 mb-4">
     <div class="student-subtitle">
         <img src="{{ asset('build/images/presentiel_picto.png') }}" class="icon-40" alt="">
         <h5 class="title-underlined">{{ 'app.view.student.presentation.class' | trans }}</h5>
