--- a/app/Resources/views/course_info/evaluation/evaluation.html.twig
+++ b/app/Resources/views/course_info/evaluation/evaluation.html.twig
@@ -3,14 +3,8 @@
 {% block subContent %}
     <div class="pt-3">
         <section>
-            <div class="card mb-5">
-                <div class="card-body" style="background-color: #D3EAF0;">
-                    <div class="row">
-                        <div class="text-center">
-                            {{ 'app.evaluation.view.mcc_informations' | trans }}
-                        </div>
-                    </div>
-                </div>
+            <div class="alert alert-primary text-center">
+                {{ 'app.evaluation.view.mcc_informations' | trans }}
             </div>
 
             <div class="card">
