--- a/app/Resources/views/course_info/view/student_info.html.twig
+++ b/app/Resources/views/course_info/view/student_info.html.twig
@@ -1,8 +1,13 @@
 <section id="information-section" class="pb-5">
     <div class="student-title">
-        <h1 class="text-primary">{{ 'app.view.student.tabs.info' | trans }}</h1>
-        <img src="{{ asset('build/images/information_photo.jpg') }}" alt="">
+        <div class="student-img-banner"
+             style="background-image: url('{{ asset('build/images/information_photo.jpg') }}') !important; ">
+        </div>
+        <div class="student-text-banner">
+            {{ 'app.view.student.tabs.info' | trans }}
+        </div>
     </div>
+
     <div class="student-grid">
         {% if courseInfo.agenda is not empty %}
             <div class="grid-element">
