--- a/app/Resources/views/course_info/view/student_presentation.html.twig
+++ b/app/Resources/views/course_info/view/student_presentation.html.twig
@@ -1,7 +1,11 @@
-<section id="presentation-section" class="pb-5">
+<section id="presentation-section" class="pb-3">
     <div class="student-title">
         <h1 class="mb-0">{{ 'app.view.student.tabs.presentation' | trans }}</h1>
-        <h5 class="mb-3">{{ courseInfo.title }} - {{ courseInfo.course.code }}</h5>
+        <h5 class="mb-3">
+            {{ courseInfo.title }} - {{ courseInfo.course.code }}
+            <span class="float-right text-sm">{{ 'app.view.student.presentation.last_update' | trans }} - {{ courseInfo.modificationDate | date("d/m/Y") }}</span>
+        </h5>
+
     </div>
     <div class="presentation-info row p-4">
         <div class="presentation-info-element col-12 col-lg-4 col-md-6 col-sm-12">
@@ -136,7 +140,7 @@
         </div>
 
         <div class="row w-100">
-            <div class="d-flex flex-column col-12 col-sm-5 col-lg-4 col-md-5">
+            <div class="d-flex flex-column col-12 col-lg-6 mb-4">
                 <h6 class="text-bold">
                     {{ 'app.view.student.presentation.teachers' | trans }}
                 </h6>
@@ -149,7 +153,7 @@
                     {% endfor %}
                 </span>
             </div>
-            <div class="d-flex col-12 col-sm-7 col-lg-8 col-md-7 student-grid" style="clear: both;">
+            <div class="col-12 col-lg-6 d-flex justify-content-between flex-wrap">
                 {% if courseInfo.teachingMode == constant('AppBundle\\Constant\\TeachingMode::IN_CLASS') or
                     courseInfo.teachingMode == constant('AppBundle\\Constant\\TeachingMode::HYBRID') %}
                     {% include 'course_info/view/student_teaching_mode_in_class.html.twig' %}
