--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -105,6 +105,12 @@
                         <p>{{ 'app.course_info.sidebar.closing_remarks' | trans }}</p>
                     </a>
                 </li>
+                <li class="nav-item menu-tab">
+                    <a class="nav-link mt-3" href="{{ path('app.course_info.view.student', { 'id': courseInfo.id }) }}" target="_blank">
+                        <i class="nav-icon fas fa-eye"></i>
+                        <p>{{ 'app.dashboard.card.see_student' | trans }}</p>
+                    </a>
+                </li>
             </ul>
         </nav>
     </div>
