published syllabus bugfix

--- a/app/Resources/views/course_info/published/published.html.twig
+++ b/app/Resources/views/course_info/published/published.html.twig
@@ -28,7 +28,7 @@
                                 {{ courseInfo.course.code }}
                             </td>
                             <td>
-                                {{ courseInfo.publisher }}
+                                {{ courseInfo.publisher.firstname }} {{ courseInfo.publisher.lastname }}
                             </td>
                             <td>
                                 {{ courseInfo.publicationDate|localizeddate('full', 'none', null) }} {{ courseInfo.publicationDate|date('H:i') }}
