--- a/app/Resources/views/course_info/view/view.html.twig
+++ b/app/Resources/views/course_info/view/view.html.twig
@@ -23,19 +23,14 @@
                     {% include 'course_info/view/student_closing_remarks.html.twig' %}
                 {% endif %}
 
-                <div class="pb-5">
-                    <div class="alert alert-default-secondary" >
-                        <h3>{{ 'app.view.student.alert.important' | trans }}</h3>
-                        <p>
-                            {{ 'app.view.student.alert.text.part_1' | trans }}
-                        </p>
-                        <p>
-                            {{ 'app.view.student.alert.text.part_2' | trans }}
-                        </p>
-                        <p>
-                            {{ 'app.view.student.alert.text.part_3' | trans }}
-                        </p>
-                    </div>
+                <div class="text-muted text-center pb-5">
+                    <h5>{{ 'app.view.student.alert.important' | trans }}</h5>
+                    <p>
+                        {{ 'app.view.student.alert.text.part_1' | trans }}
+                    </p>
+                    <p>
+                        {{ 'app.view.student.alert.text.part_2' | trans }}
+                    </p>
                 </div>
             </div>
         </div>
