--- a/app/Resources/views/syllabus/index.html.twig
+++ b/app/Resources/views/syllabus/index.html.twig
@@ -32,14 +32,13 @@
                 <table class="table table-bordered table-hover table-responsive-sm">
                     <thead>
                     <tr>
-                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'admin.syllabus.title'|trans, 'c.title') }}</th>
-                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'admin.syllabus.published_by'|trans, 'c.code') }}</th>
-                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'admin.syllabus.date'|trans, 'c.code') }}</th>
-                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'admin.syllabus.year'|trans, 'c.code') }}</th>
-                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'admin.syllabus.structure'|trans, 'c.code') }}</th>
-                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'admin.syllabus.code'|trans, 'c.type') }}</th>
-                        <th>{{ 'admin.syllabus.comment' | trans }}</th>
-                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'admin.syllabus.process'|trans, 'c.synchronized') }}</th>
+                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'admin.syllabus.title'|trans, 'ci.title') }}</th>
+                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'admin.syllabus.published_by'|trans, 'p.username') }}</th>
+                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'admin.syllabus.date'|trans, 'ci.publicationDate') }}</th>
+                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'admin.syllabus.year'|trans, 'y.label') }}</th>
+                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'admin.syllabus.structure'|trans, 's.label') }}</th>
+                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'admin.syllabus.code'|trans, 'c.code') }}</th>
+                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'admin.syllabus.level'|trans, 'ci.level.label') }}</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -65,7 +64,7 @@
                             </td>
                             <td>
                                 {% if courseInfo.structure %}
-                                    {{ courseInfo.structure.code }}
+                                    {{ courseInfo.structure.label }}
                                 {% endif %}
                             </td>
                             <td class="text-center">
@@ -74,18 +73,12 @@
                                 {% endif %}
                             </td>
                             <td class="text-center">
-                                {% if is_granted('ROLE_ADMIN_COURSE_UPDATE') %}
-                                    <a href="{{ path('app.admin.course.edit', { 'id' : courseInfo.id }) }}" class="btn btn-primary">
-                                        <i class="fas fa-edit"></i>
-                                    </a>
-                                {% endif %}
-                            </td>
-                            <td class="text-center">
-                                {% if courseInfo.course.synchronized %}
-                                    <i class="fas fa-circle text-success"></i>
-                                {% else %}
-                                    <i class="fas fa-circle text-danger"></i>
-                                {% endif %}
+                                {% for level in courseInfo.levels %}
+                                    {% if not loop.first %}
+                                        ,
+                                    {% endif %}
+                                    {{ level.label }}
+                                {% endfor %}
                             </td>
                         </tr>
                     {% endfor %}
