--- a/app/Resources/views/ask_advice/view.html.twig
+++ b/app/Resources/views/ask_advice/view.html.twig
@@ -41,6 +41,18 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div class="col-12">
+                    <div>
+                        <div class="border p-2 mt-3">
+                            <label class="title-bold-light">Commentaire (facultatif)</label>
+                            <p>
+                                {{ form_row(form.comment) }}
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="custom-control custom-switch  mt-2">
                 {{ form_row(form.process) }}
