--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -7,6 +7,7 @@
 @import "custom_variables";
 
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "~@fortawesome/fontawesome-free/scss/regular.scss";
 
 @import "~bootstrap4-toggle/css/bootstrap4-toggle.min.css";
 
