dashboard + translation form link

--- a/app/Resources/views/LexikTranslationBundle/views/Translation/_ngGrid.html.twig
+++ b/app/Resources/views/LexikTranslationBundle/views/Translation/_ngGrid.html.twig
@@ -71,7 +71,7 @@
 
     <div class="row margin-row">
         <div class="col-md-12">
-            <table ng-table="tableParams" show-filter="true" template-pagination="pager-template" class="table table-bordered table-striped">
+            <table ng-table="tableParams" show-filter="true" template-pagination="pager-template" class="table table-bordered table-striped table-responsive">
                 <thead>
                     <tr>
                         <th ng-repeat="column in columns track by $index"
