--- a/app/Resources/views/course_info/dashboard/view/dashboard.html.twig
+++ b/app/Resources/views/course_info/dashboard/view/dashboard.html.twig
@@ -187,7 +187,7 @@
                     <a class="text-dark" href="https://lms.univ-cotedazur.fr/course/view.php?id=22745" target="_blank">
                         <div class="row">
                             <div class="col-lg-2 col-md-4 col-sm-6">
-                                <img style="width: 120px;" src={{ asset('/build/images/Prof_syllabus.png') }}>
+                                <img style="width: 120px;" src={{ asset('/build/images/dashboard-information.jpg') }}>
                             </div>
                             <div class="col-lg-10 col-md-8 col-sm-6">
                                 <h4 class="mb-4">{{ 'app.dashboard.syllabus_instructions.syllabus_problem' | trans }}</h4>
