--- a/app/Resources/views/course_info/view/view.html.twig
+++ b/app/Resources/views/course_info/view/view.html.twig
@@ -31,7 +31,11 @@
                     <p>
                         {{ 'app.view.student.alert.text.part_2' | trans }}
                     </p>
+                    <a href="{{ 'app.view.student.syllabus_form.link' | trans }}" class="btn btn-outline-primary text-center" target="_blank">
+                        {{ 'app.view.student.syllabus_form.text' | trans }}
+                    </a>
                 </div>
+
             </div>
         </div>
     </div>
