banners + filters fixes

--- a/app/Resources/views/course_info/view/student_objectives.html.twig
+++ b/app/Resources/views/course_info/view/student_objectives.html.twig
@@ -1,7 +1,7 @@
 <section id="objectives-section" class="pb-5">
     <div class="student-title">
         <div class="student-img-banner"
-             style="background-image: url('{{ asset('build/images/objectif_photo.jpg') }}') !important; ">
+             style="background-image: url('{{ asset('build/images/Objectif.png') }}') !important; ">
         </div>
         <div class="student-text-banner">
             {{ 'app.view.student.tabs.objectives' | trans }}
