--- a/app/Resources/assets/scss/student_view.scss
+++ b/app/Resources/assets/scss/student_view.scss
@@ -261,6 +261,7 @@
 
       .summary {
         margin-top: 1rem;
+        margin-bottom: 2rem;
         @media (min-width: 768px) {
           margin-top: 0;
         }
