--- a/app/Resources/views/course_info/view/student_evaluation.html.twig
+++ b/app/Resources/views/course_info/view/student_evaluation.html.twig
@@ -1,7 +1,7 @@
 <section id="evaluation-section" class="pb-5">
     <div class="student-title">
         <div class="student-img-banner"
-             style="background-image: url('{{ asset('build/images/modalite_photo.jpg') }}') !important; ">
+             style="background-image: url('{{ asset('build/images/Modalités.png') }}') !important; ">
         </div>
         <div class="student-text-banner">
             {{ 'app.view.student.tabs.evaluation' | trans }}
