--- a/app/Resources/views/course_info/view/student_info.html.twig
+++ b/app/Resources/views/course_info/view/student_info.html.twig
@@ -1,7 +1,7 @@
 <section id="information-section" class="pb-5">
     <div class="student-title">
         <div class="student-img-banner"
-             style="background-image: url('{{ asset('build/images/information_photo.jpg') }}') !important; ">
+             style="background-image: url('{{ asset('build/images/Infos_pratiques.png') }}') !important; ">
         </div>
         <div class="student-text-banner">
             {{ 'app.view.student.tabs.info' | trans }}
