--- a/app/Resources/views/course_info/view/student_prerequisite.html.twig
+++ b/app/Resources/views/course_info/view/student_prerequisite.html.twig
@@ -1,7 +1,7 @@
 <section id="prerequisites-section" class="pb-5">
     <div class="student-title">
         <div class="student-img-banner"
-             style="background-image: url('{{ asset('/build/images/information_photo.jpg') }}') !important; ">
+             style="background-image: url('{{ asset('/build/images/Prérequis.png') }}') !important; ">
         </div>
         <div class="student-text-banner">
             {{ 'app.view.student.tabs.prerequisites' | trans }}
@@ -39,7 +39,7 @@
             {% endif %}
         </div>
         <div class="grid-element  grid-2-elements">
-            {% if courseInfo.courseTutoringResources is not empty %}
+            {% if courseInfo.courseTutoringResources is not empty or courseInfo.tutoring != false %}
                 <div class="student-subtitle">
                     <span class="text-bold">{{ 'app.view.student.prerequisites.tutoring_resources_description' | trans }}</span>
                 </div>
